# media-organizer

./: .env.example  .gitignore  README.md  example.py  pyproject.toml
examples/: load_into_db.py
media_organizer/: app.py  main.py  media_organizer.py  models.py  scan_movie.py  tmdb_interface.py
tests/: test_media_organizer.py
